fix(frontend): remove overflow hidden from footer to allow scrolling on mobile devices

--- a/frontend/src/components/common/footer/Footer.css
+++ b/frontend/src/components/common/footer/Footer.css
@@ -68,5 +68,3 @@
 }
 
 
-*{overflow-x: hidden;
-overflow-y: hidden;}
